--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -2,10 +2,10 @@
     <wb-module deploy-name="Souvenirs">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <dependent-module archiveName="standard.jar" deploy-path="/WEB-INF/lib" handle="module:/classpath/lib/C:/Users/liche/Desktop/部署/jakarta-taglibs-standard-1.1.2/lib/standard.jar">
+        <dependent-module archiveName="jstl.jar" deploy-path="/WEB-INF/lib" handle="module:/classpath/lib/D:/project/Souvenirs/workspace/Souvenirs/WebContent/WEB-INF/lib/jstl.jar">
             <dependency-type>uses</dependency-type>
         </dependent-module>
-        <dependent-module archiveName="jstl.jar" deploy-path="/WEB-INF/lib" handle="module:/classpath/lib/C:/Users/liche/Desktop/部署/jakarta-taglibs-standard-1.1.2/lib/jstl.jar">
+        <dependent-module archiveName="standard.jar" deploy-path="/WEB-INF/lib" handle="module:/classpath/lib/D:/project/Souvenirs/workspace/Souvenirs/WebContent/WEB-INF/lib/standard.jar">
             <dependency-type>uses</dependency-type>
         </dependent-module>
         <property name="context-root" value="Souvenirs"/>
