完善index显示；添加登录过期的页面；引入log4j进行日志管理

--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -11,6 +11,9 @@
         <dependent-module archiveName="mysql-connector-java-5.1.40-bin.jar" deploy-path="/WEB-INF/lib" handle="module:/classpath/lib/Souvenirs/WebContent/WEB-INF/lib/mysql-connector-java-5.1.40-bin.jar">
             <dependency-type>uses</dependency-type>
         </dependent-module>
+        <dependent-module archiveName="log4j-1.2.17.jar" deploy-path="/WEB-INF/lib" handle="module:/classpath/lib/Souvenirs/WebContent/WEB-INF/lib/log4j-1.2.17.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="context-root" value="Souvenirs"/>
         <property name="java-output-path" value="/Souvenirs/build/classes"/>
     </wb-module>
