制作my album管理页面；完成显示页面的后端操作；完成从homepage到album的跳转；添加picture类和实现store接口的PictureImplStore类；查询picture信息时使用store接口

--- a/WebContent/res/css/website.css
+++ b/WebContent/res/css/website.css
@@ -38,3 +38,58 @@ body {
 	padding-top:10px;
 	padding-bottom:10px;
 }
+
+div.img {
+	margin: 5px;
+	padding: 3px;
+	border: 2px solid #ffffff;
+	border-radius: 5px;
+	height: auto;
+	width: auto;
+	float: left;
+	text-align: center;
+	height: auto;
+	border: 2px solid #ffffff;
+}
+
+div.img img {
+	display: inline;
+	margin: 3px;
+	border: 1px solid #ffffff;
+}
+
+div.img:hover {
+	background-color: rgba(232, 232, 232, .8);
+	border: 2px solid #cccccc;
+}
+
+div.desc {
+	text-align: center;
+	font-weight: normal;
+	margin: 5px auto;
+ 	margin-top: 5px; 
+	white-space: nowrap;
+	text-overflow: ellipsis;
+	overflow: hidden;
+	width:120px;
+}
+
+div.desc:hover {
+	white-space: normal;
+	text-overflow: clip;
+	 word-wrap: break-word;
+	/*overflow: visible;  */
+}
+
+div.desc a:link {
+	color: #000000;
+} /* 未访问链接*/
+div.desc a:visited {
+	color: #000000;
+} /* 已访问链接 */
+div.desc a:hover {
+	color: #000000;
+} /* 鼠标移动到链接上 */
+div.desc a:active {
+	color: #000000;
+} /* 鼠标点击时 */
