--- a/WebContent/res/css/website.css
+++ b/WebContent/res/css/website.css
@@ -1,5 +1,5 @@
 body {
-	background: #2d3b36 url(/Souvenirs/res/image/bg.jpg) no-repeat bottom
+	background: #2d3b36 url(/Souvenirs/res/image/bg1.jpg) no-repeat bottom
 		center fixed;
 	background-size: cover;
 }
