--- a/WebContent/res/css/website.css
+++ b/WebContent/res/css/website.css
@@ -22,7 +22,7 @@ body {
 		margin-right: 5%;
 		margin-left: 5%;
 		font-family: Tahoma, "Microsoft YaHei", sans-serif;
-		background: rgba(232,255,255,.8);
+		background: hsla(180, 50%, 90%, 0.8);/*rgba(232,255,255,.8);*/
 		padding-bottom: 20px;
 	}
 	.footer {
