--- a/WebContent/res/css/website.css
+++ b/WebContent/res/css/website.css
@@ -22,7 +22,7 @@ body {
 		margin-right: 5%;
 		margin-left: 5%;
 		font-family: Tahoma, "Microsoft YaHei", sans-serif;
-		background: hsla(180, 50%, 90%, 0.8);/*rgba(232,255,255,.8);*/
+		background: hsla(180, 22%, 92%, .9);/*rgba(232,255,255,.8);*/
 		padding-bottom: 20px;
 	}
 	.footer {
@@ -38,7 +38,7 @@ body {
 		margin-right: 10%;
 		margin-left: 10%;
 		font-family: Tahoma, "Microsoft YaHei", sans-serif;
-		background: rgba(232,255,255,.8);
+		background: hsla(180, 22%, 92%, .9);
 		padding-bottom: 20px;
 	}
 	.footer {
@@ -54,7 +54,7 @@ body {
 		margin-right: 5px;
 		margin-left: 5px;
 		font-family: Tahoma, "Microsoft YaHei", sans-serif;
-		background: rgba(232,255,255,.8);
+		background: hsla(180, 22%, 92%, .9);
 		padding-bottom: 20px;
 	}
 	.footer {
@@ -202,4 +202,9 @@ div.desc a:active {
 
 .testswitch-checkbox:checked + .testswitch-label .testswitch-switch {
     right: 0px; 
+}
+
+div.narrow-grid {
+	padding-left:10px;
+	padding-right:10px;
 }
